<resources>
    <string name="app_name">TrackFM</string>
    <string name="todo">TODO</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_usuario_solicita_uno">¿No tienes usuario? Solicita uno</string>
    <string name="aqui">Aquí</string>
</resources>